--- a/K_Bridge/Views/Shared/_Layout.cshtml
+++ b/K_Bridge/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                             <button type="button" class="btn btn-post text-uppercase fs-6 w-100"
                                     data-bs-toggle="modal"
                                     data-bs-target="#newPostModal">
-                                Đăng chủ đề mới
+                                Đăng bài viết mới
                             </button>
                         </div>
                         <vc:layout-box-chat />
