--- a/K_Bridge/Views/Shared/_Layout.cshtml
+++ b/K_Bridge/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
     <div class="container-fluid">
         <div class="row main-content mt-4 mx-3">
             <div class="col-lg-3 col-md-4 sidebar mb-4 d-none d-md-block">
-                <vc:layout-category-list />
+                <vc:layout-forum-list />
                 <vc:layout-stat-list />
             </div>
             <div class="col-lg-6 col-md-8 col-12 content mb-4 ">
