--- a/K_Bridge/Pages/_ViewImports.cshtml
+++ b/K_Bridge/Pages/_ViewImports.cshtml
@@ -2,6 +2,8 @@
 @using Microsoft.AspNetCore.Mvc.RazorPages
 @using K_Bridge.Models
 @using K_Bridge.Infrastructure
+@using K_Bridge.Repositories
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, K_Bridge
