SeedData Global chat, fix header

--- a/K_Bridge/Views/Category/Index.cshtml
+++ b/K_Bridge/Views/Category/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="col-6 d-flex justify-content-start fw-bold fs-4 text-uppercase mb-3">
         @ViewBag.ForumName
     </div>
-    <div class="w-1 border-bottom border-main-color-logo">
+    <a class="w-1 border-bottom border-main-color-logo text-decoration-none text-black" href="/Category/TopicList">
         <div class="row flex-nowrap p-2 m-0">
             <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
                 <img src="/img/cate_1.png" alt="avatar" style="width: 50px; height: 50px;" />
@@ -35,9 +35,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </a>
 
-    <div class="w-1 border-bottom border-main-color-logo">
+    <a class="w-1 border-bottom border-main-color-logo text-decoration-none text-black" href="/Category/TopicList">
         <div class="row flex-nowrap p-2 m-0">
             <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
                 <img src="/img/cate_2.png" alt="avatar" style="width: 50px; height: 50px;" />
@@ -66,9 +66,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </a>
 
-    <div class="w-1 border-bottom border-main-color-logo">
+    <a class="w-1 border-bottom border-main-color-logo text-decoration-none text-black" href="/Category/TopicList">
         <div class="row flex-nowrap p-2 m-0">
             <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
                 <img src="/img/cate_3.png" alt="avatar" style="width: 50px; height: 50px;" />
@@ -97,9 +97,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </a>
 
-    <div class="w-1 border-bottom border-main-color-logo">
+    <a class="w-1 border-bottom border-main-color-logo text-decoration-none text-black" href="/Category/TopicList">
         <div class="row flex-nowrap p-2 m-0">
             <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
                 <img src="/img/cate_4.png" alt="avatar" style="width: 50px; height: 50px;" />
@@ -128,5 +128,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </a>
 </div>
