--- a/K_Bridge/Views/Category/TopicList.cshtml
+++ b/K_Bridge/Views/Category/TopicList.cshtml
@@ -20,7 +20,7 @@
         <img src="/img/icon_filter_sort_50.png" alt="Filter" width="20" height="20">
     </button>
 </div>
-<div class="row">
+<div class="row" onclick="window.location.href='/Category/TopicList/Post'">
     <div class="col-2 d-flex flex-column justify-content-center">
         <div class="newest-card-stat py-2">0 Câu trả lời</div>
         <div class="newest-card-stat py-2">10 Lượt xem</div>
@@ -39,7 +39,7 @@
     </div>
     <hr class="mt-2">
 </div>
-<div class="row">
+<div class="row" onclick="window.location.href='/Category/TopicList/Post'">
     <div class="col-2 d-flex flex-column justify-content-center">
         <div class="newest-card-stat py-2">0 Câu trả lời</div>
         <div class="newest-card-stat py-2">10 Lượt xem</div>
@@ -60,7 +60,7 @@
     </div>
     <hr class="mt-2">
 </div>
-<div class="row">
+<div class="row" onclick="window.location.href='/Category/TopicList/Post'">
     <div class="col-2 d-flex flex-column justify-content-center">
         <div class="newest-card-stat py-2">0 Câu trả lời</div>
         <div class="newest-card-stat py-2">10 Lượt xem</div>
@@ -79,7 +79,7 @@
     </div>
     <hr class="mt-2">
 </div>
-<div class="row">
+<div class="row" onclick="window.location.href='/Category/TopicList/Post'">
     <div class="col-2 d-flex flex-column justify-content-center">
         <div class="newest-card-stat py-2">0 Câu trả lời</div>
         <div class="newest-card-stat py-2">10 Lượt xem</div>
@@ -100,7 +100,7 @@
     </div>
     <hr class="mt-2">
 </div>
-<div class="row">
+<div class="row" onclick="window.location.href='/Category/TopicList/Post'">
     <div class="col-2 d-flex flex-column justify-content-center">
         <div class="newest-card-stat py-2">0 Câu trả lời</div>
         <div class="newest-card-stat py-2">10 Lượt xem</div>
@@ -119,7 +119,7 @@
     </div>
     <hr class="mt-2">
 </div>
-<div class="row">
+<div class="row" onclick="window.location.href='/Category/TopicList/Post'">
     <div class="col-2 d-flex flex-column justify-content-center">
         <div class="newest-card-stat py-2">0 Câu trả lời</div>
         <div class="newest-card-stat py-2">10 Lượt xem</div>
