--- a/K_Bridge/Views/Shared/Components/LayoutBoxChat/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutBoxChat/Default.cshtml
@@ -6,70 +6,17 @@
     </button>
 
     <div id="comments-container" class="rounded-3 overflow-auto flex-grow-1 mx-lg-3 d-flex flex-column-reverse" style="height: 460px;">
-        <div id="chat-messages" class="d-flex flex-column-reverse justify-content-end">
-            <div class="mb-2 d-md-flex flex-column">
-                <div class="d-md-flex align-items-center">
-                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
-                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
+        <div id="chat-messages" class="d-flex flex-column-reverse justify-content-end" style="overflow: hidden;">
+            @foreach (var chat in ViewBag.GlobalChats ?? Enumerable.Empty<GlobalChat>())
+            {
+                <div class="mb-2 d-md-flex flex-column">
+                    <div class="d-md-flex align-items-center">
+                        <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
+                        <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">@chat.Username</div>
+                    </div>
+                    <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all" style="margin-right: 4px;">@chat.Content</div>
                 </div>
-                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all" style="margin-right: 4px;">Tin nhắn của bạn </div>
-            </div>
-            <div class="mb-2 d-md-flex flex-column">
-                <div class="d-md-flex align-items-center">
-                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
-                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
-                </div>
-                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all">Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn</div>
-            </div>
-            <div class="mb-2 d-md-flex flex-column">
-                <div class="d-md-flex align-items-center">
-                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
-                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
-                </div>
-                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all" style="margin-right: 4px;">Tin nhắn của bạn </div>
-            </div>
-            <div class="mb-2 d-md-flex flex-column">
-                <div class="d-md-flex align-items-center">
-                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
-                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
-                </div>
-                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all">Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn</div>
-            </div>
-            <div class="mb-2 d-md-flex flex-column">
-                <div class="d-md-flex align-items-center">
-                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
-                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
-                </div>
-                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all" style="margin-right: 4px;">Tin nhắn của bạn </div>
-            </div>
-            <div class="mb-2 d-md-flex flex-column">
-                <div class="d-md-flex align-items-center">
-                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
-                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
-                </div>
-                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all">Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn</div>
-            </div>
-                 <div class="mb-2 d-md-flex flex-column">
-                <div class="d-md-flex align-items-center">
-                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
-                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
-                </div>
-                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all">Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn</div>
-            </div>
-                 <div class="mb-2 d-md-flex flex-column">
-                <div class="d-md-flex align-items-center">
-                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
-                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
-                </div>
-                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all">Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn</div>
-            </div>
-            <div class="mb-2 d-md-flex flex-column">
-                <div class="d-md-flex align-items-center">
-                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
-                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
-                </div>
-                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all">Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn</div>
-            </div>
+            }
         </div>
     </div>
     <div class="mx-3 my-2 input-group w-auto rounded-8 bg-main-color-btn ">
