--- a/K_Bridge/Views/Shared/Components/LayoutBoxChat/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutBoxChat/Default.cshtml
@@ -14,7 +14,7 @@
                         <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
                         <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">@chat.Username</div>
                     </div>
-                    <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all" style="margin-right: 4px;">@chat.Content</div>
+                    <div class="message fs-12 rounded-3 text-color-logo mb-1 text-break" style="margin-right: 4px;">@chat.Content</div>
                 </div>
             }
         </div>
