--- a/K_Bridge/Views/Shared/_Layout.cshtml
+++ b/K_Bridge/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
                     <div class="modal-new-post-card">
                         <div class="modal-new-post-card-name-1 py-3 px-3 collapsible-header" data-target="tai-lieu-tong-hop-content">TÀI LIỆU TỔNG HỢP</div>
                         <div id="tai-lieu-tong-hop-content" class="collapsible-content">
-                            <div class="w-auto rounded-3 modal-new-post-cate-card-1">
+                            <div class="w-auto rounded-3 modal-new-post-cate-card-1" onclick="window.location.href='/Post/Create'">
                                 <hr class="m-0 p-0 custom-hr" />
                                 <div class="row flex-nowrap p-2 m-0">
                                     <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
@@ -112,7 +112,7 @@
                                 <hr class="m-0 p-0 custom-hr" />
 
                             </div>
-                            <div class="w-auto rounded-3 modal-new-post-cate-card-1">
+                            <div class="w-auto rounded-3 modal-new-post-cate-card-1" onclick="window.location.href='/Post/Create'">
                                 <hr class="m-0 p-0 custom-hr" />
                                 <div class="row flex-nowrap p-2 m-0">
                                     <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
