--- a/K_Bridge/Views/User/Index.cshtml
+++ b/K_Bridge/Views/User/Index.cshtml
@@ -13,7 +13,7 @@
         </div>
 
         <div class="d-flex justify-content-end mt-2 ">
-            <button class="rounded-pill btn-account-edit fw-bold mt-2 me-4 text-color-background px-4 py-2">Chỉnh sửa hồ sơ người dùng</button>
+            <button class="rounded-pill btn-account-edit fw-bold mt-2 me-4 px-4 py-2">Chỉnh sửa hồ sơ người dùng</button>
         </div>
         <div class="m-3 bg-main-color-background rounded-8">
             <div class="p-5 pb-2"> 
