--- a/K_Bridge/Views/Shared/_Layout.cshtml
+++ b/K_Bridge/Views/Shared/_Layout.cshtml
@@ -75,11 +75,11 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body modal-new-post-body">
+                <div class="modal-body modal-new-post-body" style="border:solid 1px none; border-radius:5px; overflow:hidden">
                     <div class="modal-new-post-card">
                         <div class="modal-new-post-card-name-1 py-3 px-3 collapsible-header" data-target="tai-lieu-tong-hop-content">TÀI LIỆU TỔNG HỢP</div>
                         <div id="tai-lieu-tong-hop-content" class="collapsible-content">
-                            <div class="w-auto rounded-3 modal-new-post-cate-card-1">
+                            <div class="w-auto rounded-3 modal-new-post-cate-card-1 " onclick="window.location.href='/Post/Create'">
                                 <hr class="m-0 p-0 custom-hr" />
                                 <div class="row flex-nowrap p-2 m-0">
                                     <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
@@ -112,7 +112,7 @@
                                 <hr class="m-0 p-0 custom-hr" />
 
                             </div>
-                            <div class="w-auto rounded-3 modal-new-post-cate-card-1">
+                            <div class="w-auto rounded-3 modal-new-post-cate-card-1 " onclick="window.location.href='/Post/Create'">
                                 <hr class="m-0 p-0 custom-hr" />
                                 <div class="row flex-nowrap p-2 m-0">
                                     <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
@@ -151,7 +151,7 @@
                     <div class="modal-new-post-card mt-3">
                         <div class="modal-new-post-card-name-2 py-3 px-3 collapsible-header" data-target="huong-dan-content">HƯỚNG DẪN</div>
                         <div id="huong-dan-content" class="collapsible-content">
-                            <div class="w-auto rounded-3 modal-new-post-cate-card-2">
+                            <div class="w-auto rounded-3 modal-new-post-cate-card-2 " onclick="window.location.href='/Post/Create'">
                                 <hr class="m-0 p-0 custom-hr" />
                                 <div class="row flex-nowrap p-2 m-0">
                                     <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
@@ -184,7 +184,7 @@
                                 <hr class="m-0 p-0 custom-hr" />
 
                             </div>
-                            <div class="w-auto rounded-3 modal-new-post-cate-card-2">
+                            <div class="w-auto rounded-3 modal-new-post-cate-card-2 " onclick="window.location.href='/Post/Create'">
                                 <hr class="m-0 p-0 custom-hr" />
                                 <div class="row flex-nowrap p-2 m-0">
                                     <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
@@ -223,7 +223,7 @@
                     <div class="modal-new-post-card mt-3">
                         <div class="modal-new-post-card-name-3 py-3 px-3 collapsible-header" data-target="bai-giang-content">BÀI GIẢNG TRÊN LỚP</div>
                         <div id="bai-giang-content" class="collapsible-content">
-                            <div class="w-auto rounded-3 modal-new-post-cate-card-3">
+                            <div class="w-auto rounded-3 modal-new-post-cate-card-3 " onclick="window.location.href='/Post/Create'">
                                 <hr class="m-0 p-0 custom-hr" />
                                 <div class="row flex-nowrap p-2 m-0">
                                     <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
@@ -256,7 +256,7 @@
                                 <hr class="m-0 p-0 custom-hr" />
 
                             </div>
-                            <div class="w-auto rounded-3 modal-new-post-cate-card-3">
+                            <div class="w-auto rounded-3 modal-new-post-cate-card-3 " onclick="window.location.href='/Post/Create'">
                                 <hr class="m-0 p-0 custom-hr" />
                                 <div class="row flex-nowrap p-2 m-0">
                                     <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
