--- a/K_Bridge/Views/User/Index.cshtml
+++ b/K_Bridge/Views/User/Index.cshtml
@@ -12,7 +12,7 @@
             <img src="~/img/user.jpg" alt="Avatar" height="100" width="100" class=" rounded-3" style="border:10px solid #FFBE98; "/>
         </div>
 
-        <div class="d-flex justify-content-end mt-2 ">
+        <div class="d-flex justify-content-end mt-2 " onclick="window.location.href='/UserProfile/EditProfile/test1'">
             <button class="rounded-pill btn-account-edit fw-bold mt-2 me-4 text-color-background px-4 py-2">Chỉnh sửa hồ sơ người dùng</button>
         </div>
         <div class="m-3 bg-main-color-background rounded-8">
